# flappy-bird

./: .gitmodules  CMakeLists.txt  README.md
assets/AW101/: AW101.mtl
src/: CMakeLists.txt  helicopter.fs  helicopter.vs  main.cpp  tinyobjloader_wrapper.cpp  tinyobjloader_wrapper.h
src/engine/: AABB.cpp  AABB.h  CMakeLists.txt  SpriteRenderer.cpp  SpriteRenderer.h  camera.cpp  camera.h  mesh.cpp  mesh.h  movable.cpp  movable.h  object.cpp  object.h  player.cpp  player.h  renderable.cpp  renderable.h  shader.cpp  shader.h  texture.cpp  texture.h  utils.cpp  utils.h  window.cpp  window.h
src/fractal/: fractal.cpp  fractal.fs  fractal.h  fractal.vs
src/player/: helicopter.vs
